[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["HammerLi <lisicen97@gmail.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.0"
clap = { version = "3.0.0", features = ["derive", "cargo"] }
tempfile = "3.2.0"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.8"
serde_json = "1.0"
chrono = "0.4.19"
