[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["HammerLi <lisicen97@gmail.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.0"
clap = { version = "3.0.0", features = ["derive", "cargo"] }
tempfile = "3.2.0"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.8"
serde_json = "1.0"
chrono = "0.4.19"
log = "0.4.14"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"
slog-stdlog = "4.1.0"
slog-scope = "4.4.0"
sled = "0.34.7"
crossbeam-utils = "0.8.6"
num_cpus = "1.13.1"
crossbeam-channel = "0.5.2"
rayon = "1.5.1"
panic-control = "0.1.4"
